--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Document</title>
   </head>
   <body>
-    <div id="container">
+    <div id="calContainer">
       <h3>Beregn din pris</h3>
       <table>
         <tr>
