--- a/index.html
+++ b/index.html
@@ -7,12 +7,20 @@
     <style>
       #students {
         width: 3rem;
+        margin-bottom: 25px;
       }
-      #yearlyPayment{
+      #yearlyPayment {
         text-align: right;
       }
-      #perStudent{
+      #perStudent {
         text-align: right;
+      }
+      #amountLabel {
+        display: block;
+        margin-bottom: 5px;
+      }
+      #priceTag{
+        font-weight: bold;
       }
     </style>
   </head>
@@ -34,7 +42,6 @@
         <label for="students" id="amountLabel"
           >Oppgi antall studenter hos din institusjon:</label
         >
-        <br />
         <input type="text" id="students" maxlength="6" pattern="[0-9]*" />
       </div>
     </div>
