--- a/index.html
+++ b/index.html
@@ -22,20 +22,26 @@
       #priceTag{
         font-weight: bold;
       }
+      #displayTag{
+        display: none;
+      }
+      #priceTable{
+        display: none;
+      }
     </style>
   </head>
   <body>
     <div id="calContainer">
       <h2>Beregn din pris</h2>
       <p>Oppstartspris: 150 000 kr</p>
-      <table>
+      <table id="priceTable">
         <tr>
           <th>Årlig pris</th>
-          <td id="yearlyPayment">180 000 kr</td>
+          <td id="yearlyPayment">188 600 kr</td>
         </tr>
         <tr>
           <th>Pris per student</th>
-          <td id="perStudent">27 kr</td>
+          <td id="perStudent">28 kr</td>
         </tr>
       </table>
       <div id="displayContainer">
