--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
     <style>
+      input#students:focus {
+        outline: revert;
+      }
       #students {
         width: 3rem;
         margin-bottom: 25px;
@@ -19,13 +22,13 @@
         display: block;
         margin-bottom: 5px;
       }
-      #priceTag{
+      #priceTag {
         font-weight: bold;
       }
-      #displayTag{
+      #displayTag {
         display: none;
       }
-      #priceTable{
+      #priceTable {
         display: none;
       }
     </style>
